2009-06-20: 19:50 Ali aliov@xfce.org
	* Fix default values shown in the settings dialog.
	* fix issue reading default values from xfconf.

2009-06-20: 19:10 Ali aliov@xfce.org
	* Fix a DPMS storage values.

2009-06-20: 18:30  Ali aliov@xfce.org
	* settings/xfpm-settings.c
	Get a pointer to the notebook before connecting signals.
	* src/xfpm-xfconf.c Store Configurations in GValues instead of 
	individual variables.
	* src/xfpm-xfconf.c All configurations now are properties, this gives us
	configuration change signals for FREE.
	* settings/xfpm-settings.c Make it compatible with the new configuration
	changes.
	* src/xfpm-supply.c Allow suspend as a critical action.
	* src/xfpm-engine.c Provide lock screen option for LID events.
	* po/xfce4-power-manager.pot update for new strings.
	* po/* Updates all the po files.

2009-06-15: 15:40 Ali aliov@xfce.org
	* Remove libglade and use GtkBuilder instead.

2009-06-09: 11:00 Ali aliov@xfce.org
	*: Updating documentation
	*: Don't accept any event for non mapped buttons
	*: 0.8.0 release.

2009-06-04: 15:00 Ali aliov@xfce.org
	*: Use the channel in the private data.
	*: Don't show popup message if xfmp is already running and
	a new instance is trying to load for some reason.

2009-06-04: 12:00 Ali aliov@xfce.org
	*: Reset the idle counter when we switch from battery to AC and vise versa.

2009-05-29: 17:30 Ali aliov@xfce.org
	*: Fix harmless glib warning when we close the critical notification.
	*: More verbosity in the battery when debug full is provided.

2009-05-27: 11:00 Ali aliov@xfce.org
	*: use G_HAVE_ISO_VARARGS to chech if variadic macro are supported
	*: Fix some English mispelling mistakes in the doc.

2009-05-26 10:00 Ali aliov@xfce.org
	*: Provide the possibility to disable the brightness popup
	indicator in a hidden option.

2009-05-24 15:30 Ali aliov@xfce.org
	*: Fix minor issue of displaying adapter icon on desktop computers
	*: Minor changes in the glade file.

2009-05-21 15:00 Ali aliov@xfce.org