@@ -1,4 +1,8 @@
 2009-06-20: 19:50 Ali aliov@xfce.org
+	* libxfpm/xfpm-common.c Remove no longer used function, that's it
+	for Today :).
+	
+2009-06-20: 19:50 Ali aliov@xfce.org
 	* Fix default values shown in the settings dialog.
 	* fix issue reading default values from xfconf.
 
